# solana-staking-program

./: .gitignore  Anchor.toml  CHANGELOG.md  CLAUDE.md  CODE-REVIEW.md  README.md  Solana质押程序-技术设计文档-v3.md  package.json  pnpm-lock.yaml  实现路线图-IMPLEMENTATION-ROADMAP.md  最终汇报-FINAL-REPORT.md  设计与实现说明-DESIGN-NOTES.md
app/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/public/: staking.json
app/src/: App.css  App.tsx  config.ts  main.tsx  staking.ts
programs/staking/: Cargo.toml
programs/staking/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/staking/src/instructions/: admin.rs  claim.rs  close_user.rs  create_pool.rs  faucet.rs  fund.rs  hook.rs  initialize.rs  metadata.rs  mod.rs  register.rs  reward.rs  stake.rs  token_ext.rs  unstake.rs
scripts/: add-metadata.ts  airdrop-beef.ts  beef-authority-to-pda.ts  setup-devnet.ts
tests/: staking.ts
