[package]
name = "staking"
version = "0.1.0"
description = "Solana DeFi staking program with MasterChef-style rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# devnet-only self-serve $BEEF faucet. Main-net build MUST omit this feature.
devnet-faucet = []

[dependencies]
# init_if_needed: UserInfo PDA created on first stake.
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
# token_2022 gives the token_interface wrappers (transfer_checked / mint_to / burn
# over classic OR Token-2022) + spl-token-2022 extension parsing (NonTransferable,
# TransferFee, TransferHook checks in initialize).
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
