[package]
name = "staking"
version = "0.1.0"
description = "Solana DeFi staking program with MasterChef-style rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking"

[features]
# devnet-faucet ON by default (this is a devnet demo). Main-net build MUST pass
# `--no-default-features` (plus the features it needs) to omit the faucet.
default = ["devnet-faucet"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# devnet-only self-serve $BEEF faucet.
devnet-faucet = []

[dependencies]
# init_if_needed: UserInfo PDA created on first stake.
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
# token_2022 gives the token_interface wrappers (transfer_checked / mint_to / burn
# over classic OR Token-2022) + spl-token-2022 extension parsing.
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
# Transfer Hook (v3.1): $STAKE is transferable; the program implements the hook
# interface and settles rewards on every transfer. Versions match those already
# resolved transitively by anchor-spl 0.31.1 / spl-token-2022 6.0 (no conflict).
spl-transfer-hook-interface = "0.9.0"
spl-tlv-account-resolution = "0.9.0"
